# Zebra_detection

./: .dockerignore  .gitignore  .vercelignore  API_COMPLETE.md  API_DOCUMENTATION.md  Dockerfile  FLASK_API_SUMMARY.txt  MATCHING_DEMO.md  README.md  SYSTEM_INTEGRATION.md  TASK_COMPLETE.md  VSCODE_COMPLETE.md  VSCODE_GUIDE.md  data.yaml  pyproject.toml  test_api.sh  test_matcher.py  zebra.db  zebra.index
Zebra.v1i.yolov8/: README.dataset.txt  README.roboflow.txt  data.yaml
api/: index.py
crops/: meta.json
datasets/train/: labels.cache
datasets/valid/: labels.cache
docs/: detection_data_improvement_plan.md  innovation_hard_mining.md  reid_dataset_plan.md  zebra_v1_rollout_report.md
examples/: match_demo.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  App.tsx  index.css
models/: reid.py
scripts/: app.py  build_next_dataset.py  crop_and_save.py  extract_embeddings.py  hard_miner.py  index_and_db.py  matcher.py  smoke_client.py
tests/: test_api.py  test_api_identify.py  test_api_video.py  test_data_pipeline.py  test_dataset_utils.py  test_download.py  test_experiments_evaluate.py  test_feature_engine.py  test_id_generator.py  test_live_cctv.py  test_matching.py  test_matching_robustness.py  test_prefilter.py  test_preprocessing_pipeline.py  test_real_identify.py  test_registry.py  test_torch_dataset.py  test_video_test_cli.py  test_x_debug.py
zebraid/: README.md  __init__.py
zebraid/api/: __init__.py  app.py
zebraid/data/: __init__.py  acquisition.py  dataset_utils.py  download.py  loader.py  (+4 more)
(+1012 files in other folders)
