[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zebraid"
version = "0.1.0"
description = "Phase 0 foundation for zebra detection and re-identification"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.136",
  "uvicorn[standard]>=0.45",
  "python-multipart>=0.0.9",
  "numpy>=2.2",
  "opencv-python>=4.12",
  "faiss-cpu>=1.13",
  "icrawler>=0.6.10",
  "torch>=2.9",
  "torchvision>=0.24",
]

[project.optional-dependencies]
dev = ["pytest>=9", "httpx>=0.28"]
tracking = ["deep-sort-realtime>=1.3.2"]

[project.scripts]
zebraid-api = "zebraid.api.app:main"
zebraid-download-images = "zebraid.data.download:main"
zebraid-test-video = "zebraid.pipelines.video_test:main"
zebraid-evaluate = "zebraid.experiments.evaluate:main"

[tool.setuptools.packages.find]
include = ["zebraid*"]
